@@ -6,6 +6,7 @@ Issue #1180 New-BcContainerWizard doesn't work (if BcContainerHelper is installe
 Change NavContainerhelper to BcContainerHelper in New-BcContainerWizard
 Sandbox containers are multitenant by default (as SaaS is multitenant!)
 Issue #1191 New-BcImage should add the same auto-tag as New-BcContainer
+Issue #1190 New-BcImage will return imagename after generation
 
 1.0.0
 Change module name to BcContainerHelper
